# Philosopher

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  compile_flags.txt  main.c  philo  thread.md
Testing/Temporary/: CTestCostData.txt
diary/: 2022-08-30.md
includes/: ft_atoi.h  ft_isdigit.h  parsing.h  philo.h  philosopher.h
includes/parsing/: ft_atoi.h  ft_atol.h  parsing.h
includes/philo/: philosopher.h
includes/philosophers/: philosopher.h  philosopher_utils.h
includes/simulation/: life.h  simulation.h
includes/utils/: ft_bzero.h  ft_calloc.h  utils.h
includes/waitor/: waitor.h
src/: ft_atoi.c  ft_isdigit.c  main.c  parsing.c
srcs/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
srcs/parsing/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atol.c  ft_isdigit.c  parsing.c
srcs/philosophers/: philo.c  philo_routine_utils.c  philosopher_routine.c  philosophers.c
srcs/simulation/: life.c  simulation.c
srcs/utils/: ft_bzero.c  ft_calloc.c  something.c  utils.c
srcs/waitor/: waitor.c
test/: 2  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_test.c  parsing_test  parsing_test.c  simple_test  simple_test.c
test/Testing/Temporary/: CTestCostData.txt
